--- a/src/eda/EDA_Notebook.ipynb
+++ b/src/eda/EDA_Notebook.ipynb
@@ -44,6 +44,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "2ddbb639",
+   "metadata": {},
+   "source": [
+    "# check profiling of dataset,\n",
+    "##### This may take awhile"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "id": "f7d24c3a",
@@ -111,6 +120,14 @@
     "\n",
     "profile = pandas_profiling.ProfileReport(df)\n",
     "profile.to_widgets()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2fa89f58",
+   "metadata": {},
+   "source": [
+    "## Remove outliers by declaing the minimum and maximum value for price"
    ]
   },
   {
@@ -455,6 +472,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "98729cf4",
+   "metadata": {},
+   "source": [
+    "# Check profile again for outliers"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 5,
    "id": "54c6fe86",
@@ -620,7 +645,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
